Fix Render deployment reliability and API/frontend consistency

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,48 +1,33 @@
-# BuildPro API - Environment Variables Template
-# Copy this file to .env and fill in the values
+# Backend environment template
+# Copy to apps/api/.env for local development.
 
-# --------------------------------------------------------
-# REQUIRED FOR PRODUCTION
-# --------------------------------------------------------
+# Database
+# Local SQLite example:
+# DATABASE_URL=sqlite:///./buildpro_local.db
+# Local Postgres example:
+DATABASE_URL=postgresql://buildpro:buildpro123@localhost:5432/buildpro
 
-# Database (Render will set this automatically)
-DATABASE_URL=postgresql://buildpro:password@localhost:5432/buildpro_db
+# App
+ENVIRONMENT=development
+DEBUG=true
+SECRET_KEY=change-this-in-production
 
-# Security (Render will auto-generate this)
-SECRET_KEY=your-super-secret-key-min-32-characters-long
+# CORS (comma-separated list or JSON array of exact origins)
+# Production example:
+# ALLOWED_ORIGINS=https://<frontend-site>.onrender.com,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173
 
-# Environment
-ENVIRONMENT=production
-DEBUG=false
+# Storage
+USE_CLOUD_STORAGE=false
+UPLOAD_DIR=./uploads
+MAX_UPLOAD_SIZE=52428800
 
-# --------------------------------------------------------
-# CLOUD STORAGE (Cloudflare R2 - for document persistence)
-# --------------------------------------------------------
-# Get these from Cloudflare Dashboard > R2 > Manage R2 API Tokens
-
-USE_CLOUD_STORAGE=true
-R2_ACCOUNT_ID=your-cloudflare-account-id
-R2_ACCESS_KEY_ID=your-r2-access-key
-R2_SECRET_ACCESS_KEY=your-r2-secret-key
+# Optional cloud storage
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
 R2_BUCKET_NAME=buildpro-documents
-R2_ENDPOINT_URL=https://your-account-id.r2.cloudflarestorage.com
-R2_PUBLIC_URL=https://pub-xxx.r2.dev
+R2_ENDPOINT_URL=
+R2_PUBLIC_URL=
 
-# --------------------------------------------------------
-# OPTIONAL SERVICES
-# --------------------------------------------------------
-
-# Redis (for caching/sessions)
+# Optional Redis
 REDIS_URL=redis://localhost:6379/0
-
-# Email (SMTP)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-EMAIL_FROM=noreply@buildpro.ug
-
-# SMS (Africa's Talking)
-AFRICAS_TALKING_USERNAME=sandbox
-AFRICAS_TALKING_API_KEY=your-api-key
-SMS_SENDER_ID=BuildPro
