--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,11 +1,12 @@
-# BuildPro Frontend - Environment Variables Template
-# Copy to .env.local for local development
+# Frontend environment template
+# Copy to apps/web/.env.local for local development.
 
-# API URL - Backend API endpoint
+# Backend API origin (protocol required/recommended)
+# Examples:
+# VITE_API_URL=http://localhost:8000
+# VITE_API_URL=https://<api-service>.onrender.com
+# Note: /api is appended automatically if missing.
 VITE_API_URL=http://localhost:8000
 
-# For production deployment:
-# VITE_API_URL=https://your-api.onrender.com
-
-# NOTE: Gemini AI API Key is now backend-only for security
-# No frontend API keys needed
+# Optional backend AI endpoint (no frontend API keys)
+# VITE_AI_CHAT_URL=http://localhost:8000/api/v1/ai/chat
