--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,6 +1,7 @@
 # FastAPI & ASGI
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
+gunicorn==22.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
 python-multipart==0.0.6
@@ -22,7 +23,7 @@ flower==2.0.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-bcrypt==4.1.2
+bcrypt==4.0.1
 
 # WebSockets
 python-socketio==5.11.0
