--- a/render.yaml
+++ b/render.yaml
@@ -1,66 +1,50 @@
-# Render Deployment Configuration
+databases:
+  - name: buildpro-db
+    plan: starter
+    databaseName: buildpro
+    user: buildpro
 
 services:
-  # PostgreSQL Database
-  - type: pserv
-    name: buildpro-db
-    env: docker
-    plan: starter
-    region: oregon
-    databases:
-      - name: buildpro
-        user: buildpro
-
-  # Redis (Optional - for background jobs)
-  - type: redis
-    name: buildpro-redis
-    plan: starter
-    region: oregon
-    maxmemoryPolicy: allkeys-lru
-
-  # Backend API
   - type: web
     name: buildpro-api
     env: python
     region: oregon
     plan: starter
-    buildCommand: cd apps/api && pip install -r requirements.txt
-    startCommand: cd apps/api && alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    rootDir: apps/api
+    autoDeploy: true
+    buildCommand: pip install -r requirements.txt
+    startCommand: alembic upgrade head && gunicorn -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:$PORT
+    healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: buildpro-db
           property: connectionString
-      - key: REDIS_URL
-        fromService:
-          name: buildpro-redis
-          type: redis
-          property: connectionString
       - key: SECRET_KEY
         generateValue: true
       - key: ENVIRONMENT
         value: production
+      - key: DEBUG
+        value: false
       - key: ALLOWED_ORIGINS
         sync: false
       - key: USE_CLOUD_STORAGE
         value: false
       - key: MAX_UPLOAD_SIZE
-        value: 10485760
-    healthCheckPath: /health
+        value: 52428800
 
-  # Frontend Static Site
   - type: web
     name: buildpro-web
     env: static
     region: oregon
-    buildCommand: cd apps/web && npm install && npm run build
-    staticPublishPath: apps/web/dist
+    plan: starter
+    rootDir: apps/web
+    autoDeploy: true
+    buildCommand: npm ci && npm run build
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
-        fromService:
-          name: buildpro-api
-          type: web
-          property: host
+        sync: false
     routes:
       - type: rewrite
         source: /*
