Harden production readiness and align API/model/deploy config

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,6 +10,7 @@ DATABASE_URL=postgresql://buildpro:buildpro123@localhost:5432/buildpro
 # App
 ENVIRONMENT=development
 DEBUG=true
+# Use a strong random value (>= 32 chars) in production.
 SECRET_KEY=change-this-in-production
 
 # CORS (comma-separated list or JSON array of exact origins)
@@ -23,6 +24,7 @@ UPLOAD_DIR=./uploads
 MAX_UPLOAD_SIZE=52428800
 
 # Optional cloud storage
+# Required when USE_CLOUD_STORAGE=true (recommended for Render production)
 R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
 R2_BUCKET_NAME=buildpro-documents
