--- a/render.yaml
+++ b/render.yaml
@@ -29,7 +29,17 @@ services:
       - key: ALLOWED_ORIGINS
         sync: false
       - key: USE_CLOUD_STORAGE
-        value: false
+        sync: false
+      - key: R2_ACCESS_KEY_ID
+        sync: false
+      - key: R2_SECRET_ACCESS_KEY
+        sync: false
+      - key: R2_BUCKET_NAME
+        sync: false
+      - key: R2_ENDPOINT_URL
+        sync: false
+      - key: R2_PUBLIC_URL
+        sync: false
       - key: MAX_UPLOAD_SIZE
         value: 52428800
 
