feat: production readiness updates for notifications, BOQ, exports, and project overview

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -10,3 +10,7 @@ VITE_API_URL=http://localhost:8000
 
 # Optional backend AI endpoint (no frontend API keys)
 # VITE_AI_CHAT_URL=http://localhost:8000/api/v1/ai/chat
+
+# Optional internal flag for mock/demo data (default false for production)
+# Set true only when intentionally running the UI without a live backend.
+VITE_DEMO_MODE=false
