Fix Render CORS defaults and frontend API base normalization

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -15,7 +15,7 @@ SECRET_KEY=change-this-in-production
 
 # CORS (comma-separated list or JSON array of exact origins)
 # Production example:
-# ALLOWED_ORIGINS=https://<frontend-site>.onrender.com,http://localhost:5173
+# ALLOWED_ORIGINS=https://buildpro-web.onrender.com,http://localhost:5173,http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:5173
 
 # Storage
