--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -5,7 +5,8 @@
 # Examples:
 # VITE_API_URL=http://localhost:8000
 # VITE_API_URL=https://<api-service>.onrender.com
-# Note: /api is appended automatically if missing.
+# VITE_API_URL=https://<api-service>.onrender.com/api/v1
+# Note: /api is appended automatically if missing; /api/v1 is normalized to /api.
 VITE_API_URL=http://localhost:8000
 
 # Optional backend AI endpoint (no frontend API keys)
